# tbd-iac

./: .releaserc.json  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: ci.yml
scripts/: bump-version.sh
src/: lib.rs  main.rs  startup.rs
src/cli/: init.rs  mod.rs
src/cmd/: new.rs
src/config/: mod.rs
src/providers/: mod.rs
src/state/: mod.rs
tests/cli/: init_test.rs
