[package]
name = "tbd-iac"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Morgan <steve@rebelops.io>"]
description = "Infrastructure as Code tool"
license = "MIT"

[[bin]]
name = "tbd"
path = "src/main.rs"
[lib]
name = "tbd_iac"
path = "src/lib.rs"

[dependencies]
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime and traits
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system operations
fs_extra = "1.3"

[dev-dependencies]

tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
